--- a/index.html
+++ b/index.html
@@ -875,7 +875,8 @@
                 ScrollReveal().reveal('.about__data, .home__data, .home__scroll', { delay: 700, origin: 'bottom'});
                 ScrollReveal().reveal('.skills__container, .qualification_container, .portfolio__container,.contact__container', { delay: 500, origin: 'bottom', interval: 200});
                 ScrollReveal().reveal('.home__img, .services__container, .project', { delay: 600, origin: 'top'});
-                ScrollReveal().reveal('.about__img, .testimonial, .footer', { delay: 500, origin: 'bottom'});
+                ScrollReveal().reveal('.about__img, .testimonial', { delay: 500, origin: 'bottom'});
+                 ScrollReveal().reveal('.footer', { delay: 700, origin: 'bottom'});
                 
     
     </script>
